--- a/src/css/theme change/ThemeChange.css
+++ b/src/css/theme change/ThemeChange.css
@@ -1,33 +1,28 @@
 .theme-dark {
-    --dark-text: #ffffff;
-  
-    --dark-background: #080221;
-    
-  }
-  .theme-light {
- 
-    --light-text: #000000;
-  
-    --light-background: #EDDCD2;
-    --another-text:#ffffff;
-  }
+  --dark-text: #ffffff;
 
-  .App{
-     
-      color: var(--dark-text);
-  }
-body{
-    background-color: var(--dark-background);
-    color:var(--dark-text) ;
+  --dark-background: #080221;
 }
-.box_write{
-    color: var(--another-text);
- 
+.theme-light {
+  --light-text: #000000;
+
+  --light-background: #eddcd2;
+  --another-text: #ffffff;
 }
-.footer_image{
+
+.App {
+  color: var(--dark-text);
+}
+body {
+  background-color: var(--dark-background);
+  color: var(--dark-text);
+}
+.box_write {
   color: var(--another-text);
 }
-
+.footer_image {
+  color: var(--another-text);
+}
 
 /* checkbox style */
 .switch {
@@ -53,8 +48,8 @@ body{
   right: 0;
   bottom: 0;
   background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 .slider:before {
@@ -65,16 +60,16 @@ body{
   left: 4px;
   bottom: 4px;
   background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 input:checked + .slider {
-  background-color: #2196F3;
+  background-color: #2196f3;
 }
 
 input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
+  box-shadow: 0 0 1px #2196f3;
 }
 
 input:checked + .slider:before {
