--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,20 @@
-
-
 body {
   margin: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #080221;
   color: white;
-
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-h1,h2,h3,h4{
+h1,
+h2,
+h3,
+h4 {
   margin: 0;
   text-transform: uppercase;
 }
