--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -14,6 +14,7 @@
 
   background-color: #8446ab;
   width: -webkit-fill-available;
+  width: -moz-available;
   display: flex;
   /* justify-content: space-between; */
   align-items: center;
