--- a/src/App.css
+++ b/src/App.css
@@ -22,4 +22,21 @@
   
 }
 
+
+.details_style{ 
+  margin: 10px 100px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+
+  grid-gap: 10px;
+}
+.photo_details img{
+  width: 100%;
+}
+.three_image{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  padding: 10px;
+  grid-gap: 10px;
+}
 /*  */
